@@ -7,7 +7,7 @@
  * "License"); you may not use this file except in compliance
  * with the License.  You may obtain a copy of the License at
  *
- *   http://www.apache.org/licenses/LICENSE-2.0
+ *   https://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing,
  * software distributed under the License is distributed on an
@@ -18,21 +18,40 @@
  */
 package org.apache.accumulo.manager.upgrade;
 
+import static java.util.concurrent.TimeUnit.SECONDS;
+import static org.apache.accumulo.core.util.threads.ThreadPoolNames.MANAGER_UPGRADE_COORDINATOR_METADATA_POOL;
+import static org.apache.accumulo.server.AccumuloDataVersion.METADATA_FILE_JSON_ENCODING;
+import static org.apache.accumulo.server.AccumuloDataVersion.REMOVE_DEPRECATIONS_FOR_VERSION_3;
+import static org.apache.accumulo.server.AccumuloDataVersion.ROOT_TABLET_META_CHANGES;
+
+import java.io.IOException;
+import java.util.Collections;
 import java.util.Map;
-import java.util.OptionalInt;
+import java.util.Objects;
+import java.util.TreeMap;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.Future;
 import java.util.concurrent.SynchronousQueue;
-import java.util.concurrent.TimeUnit;
 
-import org.apache.accumulo.core.dataImpl.KeyExtent;
+import org.apache.accumulo.core.Constants;
+import org.apache.accumulo.core.client.AccumuloException;
+import org.apache.accumulo.core.client.AccumuloSecurityException;
+import org.apache.accumulo.core.client.NamespaceNotFoundException;
+import org.apache.accumulo.core.client.TableNotFoundException;
+import org.apache.accumulo.core.conf.ConfigCheckUtil;
+import org.apache.accumulo.core.metadata.schema.Ample;
 import org.apache.accumulo.core.util.threads.ThreadPools;
+import org.apache.accumulo.core.volume.Volume;
 import org.apache.accumulo.manager.EventCoordinator;
-import org.apache.accumulo.server.ServerConstants;
+import org.apache.accumulo.server.AccumuloDataVersion;
 import org.apache.accumulo.server.ServerContext;
-import org.apache.accumulo.server.ServerUtil;
+import org.apache.accumulo.server.ServerDirs;
+import org.apache.accumulo.server.conf.CheckCompactionConfig;
+import org.apache.accumulo.server.fs.VolumeManager;
+import org.apache.hadoop.fs.Path;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.slf4j.event.Level;
 
 import com.google.common.base.Preconditions;
 
@@ -42,12 +61,12 @@ public class UpgradeCoordinator {
 
   public enum UpgradeStatus {
     /**
-     * This signifies the upgrade status is in the process of being determined. Its best to assume
+     * This signifies the upgrade status is in the process of being determined. It is best to assume
      * nothing is upgraded when seeing this.
      */
     INITIAL {
       @Override
-      public boolean isParentLevelUpgraded(KeyExtent extent) {
+      public boolean isParentLevelUpgraded(Ample.DataLevel level) {
         return false;
       }
     },
@@ -56,8 +75,8 @@ public class UpgradeCoordinator {
      */
     UPGRADED_ZOOKEEPER {
       @Override
-      public boolean isParentLevelUpgraded(KeyExtent extent) {
-        return extent.isRootTablet();
+      public boolean isParentLevelUpgraded(Ample.DataLevel level) {
+        return level == Ample.DataLevel.ROOT;
       }
     },
     /**
@@ -65,8 +84,17 @@ public class UpgradeCoordinator {
      */
     UPGRADED_ROOT {
       @Override
-      public boolean isParentLevelUpgraded(KeyExtent extent) {
-        return extent.isMeta();
+      public boolean isParentLevelUpgraded(Ample.DataLevel level) {
+        return level == Ample.DataLevel.METADATA || level == Ample.DataLevel.ROOT;
+      }
+    },
+    /**
+     * This signifies that zookeeper and the root and metadata tables have been upgraded so far.
+     */
+    UPGRADED_METADATA {
+      @Override
+      public boolean isParentLevelUpgraded(Ample.DataLevel level) {
+        return level == Ample.DataLevel.METADATA || level == Ample.DataLevel.ROOT;
       }
     },
     /**
@@ -74,7 +102,7 @@ public class UpgradeCoordinator {
      */
     COMPLETE {
       @Override
-      public boolean isParentLevelUpgraded(KeyExtent extent) {
+      public boolean isParentLevelUpgraded(Ample.DataLevel level) {
         return true;
       }
     },
@@ -83,7 +111,7 @@ public class UpgradeCoordinator {
      */
     FAILED {
       @Override
-      public boolean isParentLevelUpgraded(KeyExtent extent) {
+      public boolean isParentLevelUpgraded(Ample.DataLevel level) {
         return false;
       }
     };
@@ -92,14 +120,18 @@ public class UpgradeCoordinator {
      * Determines if the place where this extent stores its metadata was upgraded for a given
      * upgrade status.
      */
-    public abstract boolean isParentLevelUpgraded(KeyExtent extent);
+    public abstract boolean isParentLevelUpgraded(Ample.DataLevel level);
   }
 
-  private static Logger log = LoggerFactory.getLogger(UpgradeCoordinator.class);
+  private static final Logger log = LoggerFactory.getLogger(UpgradeCoordinator.class);
 
   private int currentVersion;
-  private Map<Integer,Upgrader> upgraders = Map.of(ServerConstants.SHORTEN_RFILE_KEYS,
-      new Upgrader8to9(), ServerConstants.CRYPTO_CHANGES, new Upgrader9to10());
+  // map of "current version" -> upgrader to next version.
+  // Sorted so upgrades execute in order from the oldest supported data version to current
+  private final Map<Integer,
+      Upgrader> upgraders = Collections.unmodifiableMap(new TreeMap<>(
+          Map.of(ROOT_TABLET_META_CHANGES, new Upgrader10to11(), REMOVE_DEPRECATIONS_FOR_VERSION_3,
+              new Upgrader11to12(), METADATA_FILE_JSON_ENCODING, new Upgrader12to13())));
 
   private volatile UpgradeStatus status;
 
@@ -131,21 +163,24 @@ public class UpgradeCoordinator {
         "Not currently in a suitable state to do zookeeper upgrade %s", status);
 
     try {
-      int cv = ServerUtil.getAccumuloPersistentVersion(context.getVolumeManager());
-      ServerUtil.ensureDataVersionCompatible(cv);
+      int cv = AccumuloDataVersion.getCurrentVersion(context);
       this.currentVersion = cv;
 
-      if (cv == ServerConstants.DATA_VERSION) {
+      if (cv == AccumuloDataVersion.get()) {
         status = UpgradeStatus.COMPLETE;
         return;
       }
 
-      if (currentVersion < ServerConstants.DATA_VERSION) {
-        ServerUtil.abortIfFateTransactions(context);
+      if (currentVersion < AccumuloDataVersion.get()) {
+        abortIfFateTransactions(context);
 
-        for (int v = currentVersion; v < ServerConstants.DATA_VERSION; v++) {
-          log.info("Upgrading Zookeeper from data version {}", v);
-          upgraders.get(v).upgradeZookeeper(context);
+        for (int v = currentVersion; v < AccumuloDataVersion.get(); v++) {
+          log.info("Upgrading Zookeeper - current version {} as step towards target version {}", v,
+              AccumuloDataVersion.get());
+          var upgrader = upgraders.get(v);
+          Objects.requireNonNull(upgrader,
+              "upgrade ZooKeeper: failed to find upgrader for version " + currentVersion);
+          upgrader.upgradeZookeeper(context);
         }
       }
 
@@ -158,31 +193,46 @@ public class UpgradeCoordinator {
 
   public synchronized Future<Void> upgradeMetadata(ServerContext context,
       EventCoordinator eventCoordinator) {
-    if (status == UpgradeStatus.COMPLETE)
+    if (status == UpgradeStatus.COMPLETE) {
       return CompletableFuture.completedFuture(null);
+    }
 
     Preconditions.checkState(status == UpgradeStatus.UPGRADED_ZOOKEEPER,
         "Not currently in a suitable state to do metadata upgrade %s", status);
 
-    if (currentVersion < ServerConstants.DATA_VERSION) {
-      return ThreadPools.createThreadPool(0, Integer.MAX_VALUE, 60L, TimeUnit.SECONDS,
-          "UpgradeMetadataThreads", new SynchronousQueue<Runnable>(), OptionalInt.empty(), false)
-          .submit(() -> {
+    if (currentVersion < AccumuloDataVersion.get()) {
+      return ThreadPools.getServerThreadPools()
+          .getPoolBuilder(MANAGER_UPGRADE_COORDINATOR_METADATA_POOL).numCoreThreads(0)
+          .numMaxThreads(Integer.MAX_VALUE).withTimeOut(60L, SECONDS)
+          .withQueue(new SynchronousQueue<>()).build().submit(() -> {
             try {
-              for (int v = currentVersion; v < ServerConstants.DATA_VERSION; v++) {
-                log.info("Upgrading Root from data version {}", v);
+              for (int v = currentVersion; v < AccumuloDataVersion.get(); v++) {
+                log.info("Upgrading Root - current version {} as step towards target version {}", v,
+                    AccumuloDataVersion.get());
+                var upgrader = upgraders.get(v);
+                Objects.requireNonNull(upgrader,
+                    "upgrade root: failed to find root upgrader for version " + currentVersion);
                 upgraders.get(v).upgradeRoot(context);
               }
-
               setStatus(UpgradeStatus.UPGRADED_ROOT, eventCoordinator);
 
-              for (int v = currentVersion; v < ServerConstants.DATA_VERSION; v++) {
-                log.info("Upgrading Metadata from data version {}", v);
+              for (int v = currentVersion; v < AccumuloDataVersion.get(); v++) {
+                log.info(
+                    "Upgrading Metadata - current version {} as step towards target version {}", v,
+                    AccumuloDataVersion.get());
+                var upgrader = upgraders.get(v);
+                Objects.requireNonNull(upgrader,
+                    "upgrade metadata: failed to find upgrader for version " + currentVersion);
                 upgraders.get(v).upgradeMetadata(context);
               }
+              setStatus(UpgradeStatus.UPGRADED_METADATA, eventCoordinator);
+
+              log.info("Validating configuration properties.");
+              validateProperties(context);
 
               log.info("Updating persistent data version.");
-              ServerUtil.updateAccumuloVersion(context.getVolumeManager(), currentVersion);
+              updateAccumuloVersion(context.getServerDirs(), context.getVolumeManager(),
+                  currentVersion);
               log.info("Upgrade complete");
               setStatus(UpgradeStatus.COMPLETE, eventCoordinator);
             } catch (Exception e) {
@@ -195,7 +245,92 @@ public class UpgradeCoordinator {
     }
   }
 
+  private void validateProperties(ServerContext context) {
+    ConfigCheckUtil.validate(context.getSiteConfiguration(), "site configuration");
+    ConfigCheckUtil.validate(context.getConfiguration(), "system configuration");
+    try {
+      for (String ns : context.namespaceOperations().list()) {
+        ConfigCheckUtil.validate(
+            context.namespaceOperations().getNamespaceProperties(ns).entrySet(),
+            ns + " namespace configuration");
+      }
+      for (String table : context.tableOperations().list()) {
+        ConfigCheckUtil.validate(context.tableOperations().getTableProperties(table).entrySet(),
+            table + " table configuration");
+      }
+    } catch (AccumuloException | AccumuloSecurityException | NamespaceNotFoundException
+        | TableNotFoundException e) {
+      throw new IllegalStateException("Error checking properties", e);
+    }
+    try {
+      CheckCompactionConfig.validate(context.getConfiguration(), Level.INFO);
+    } catch (RuntimeException | ReflectiveOperationException e) {
+      throw new IllegalStateException("Error validating compaction configuration", e);
+    }
+  }
+
+  // visible for testing
+  synchronized void updateAccumuloVersion(ServerDirs serverDirs, VolumeManager fs, int oldVersion) {
+    for (Volume volume : fs.getVolumes()) {
+      try {
+        if (serverDirs.getAccumuloPersistentVersion(volume) == oldVersion) {
+          log.debug("Attempting to upgrade {}", volume);
+          Path dataVersionLocation = serverDirs.getDataVersionLocation(volume);
+          fs.create(new Path(dataVersionLocation, Integer.toString(AccumuloDataVersion.get())))
+              .close();
+          // TODO document failure mode & recovery if FS permissions cause above to work and below
+          // to fail ACCUMULO-2596
+          Path prevDataVersionLoc = new Path(dataVersionLocation, Integer.toString(oldVersion));
+          if (!fs.delete(prevDataVersionLoc)) {
+            throw new RuntimeException("Could not delete previous data version location ("
+                + prevDataVersionLoc + ") for " + volume);
+          }
+        }
+      } catch (IOException e) {
+        throw new RuntimeException("Unable to set accumulo version: an error occurred.", e);
+      }
+    }
+  }
+
   public UpgradeStatus getStatus() {
     return status;
+  }
+
+  /**
+   * Exit loudly if there are outstanding Fate operations. Since Fate serializes class names, we
+   * need to make sure there are no queued transactions from a previous version before continuing an
+   * upgrade. The status of the operations is irrelevant; those in SUCCESSFUL status cause the same
+   * problem as those just queued.
+   * <p>
+   * Note that the Manager should not allow write access to Fate until after all upgrade steps are
+   * complete.
+   * <p>
+   * Should be called as a guard before performing any upgrade steps, after determining that an
+   * upgrade is needed.
+   * <p>
+   * see ACCUMULO-2519
+   */
+  @SuppressFBWarnings(value = "DM_EXIT",
+      justification = "Want to immediately stop all manager threads on upgrade error")
+  private void abortIfFateTransactions(ServerContext context) {
+    try {
+      // The current version of the code creates the new accumulo.fate table on upgrade, so no
+      // attempt is made to read it here. Attempting to read it this point would likely cause a hang
+      // as tablets are not assigned when this is called. The Fate code is not used to read from
+      // zookeeper below because the serialization format changed in zookeeper, that is why a direct
+      // read is performed.
+      if (!context.getZooSession().asReader()
+          .getChildren(context.getZooKeeperRoot() + Constants.ZFATE).isEmpty()) {
+        throw new AccumuloException("Aborting upgrade because there are"
+            + " outstanding FATE transactions from a previous Accumulo version."
+            + " You can start the tservers and then use the shell to delete completed "
+            + " transactions. If there are incomplete transactions, you will need to roll"
+            + " back and fix those issues. Please see the following page for more information: "
+            + " https://accumulo.apache.org/docs/2.x/troubleshooting/advanced#upgrade-issues");
+      }
+    } catch (Exception exception) {
+      log.error("Problem verifying Fate readiness", exception);
+      System.exit(1);
+    }
   }
 }
